<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="16.0dip"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:paddingStart="16.0dip"
            android:paddingTop="16.0dip">

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/book_image" />

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16.0dip"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:paddingStart="16.0dip"
                android:textSize="24.0sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/bookDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16.0dip"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:paddingStart="16.0dip"
            android:paddingTop="16.0dip"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/grabButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16.0dip"
            android:text="@string/get_this_book" />

        <LinearLayout
            android:id="@+id/downloadLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16.0dip"
            android:animateLayoutChanges="false"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0"
                android:text="@string/download"
                android:textAlignment="center"
                android:textSize="18.0sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dloadEpubButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/epub" />

                <Button
                    android:id="@+id/dloadMobiButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/mobi" />

                <Button
                    android:id="@+id/dloadPdfButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/pdf" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>